# Desktitle2.0

./: .gitignore  AUTHORS  COPYING-PLAIN  ChangeLog  Makefile.am  README  README.md  TODO.md  configure.ac  desktitle.edc  e-module-desktitle.edc  meson.build  module.desktop  module.desktop.in
debian/: changelog  control  copyright  moksha-module-desktitle.lintian-overrides
m4/: ac_attribute.m4
po/: LINGUAS  Makevars  ar.po  be.po  bg.po  cs.po  de.po  desktitle.pot  el.po  eo.po  es.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  lt.po  ml.po  mr.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h
